# noodle

./: .gitignore  Makefile  README.md  example.py  package.json  pyproject.toml
.github/: copilot-instructions.md
apps/core/: models.py  tasks.py  views.py
apps/finance/: admin.py  filters.py  schema.py  serializers.py  services.py  urls.py  views.py
apps/finance/migrations/: 0001_initial.py
apps/finance/models/: __init__.py  account.py  category.py  transaction.py
apps/finance/tests/: test_accounts.py  test_services.py  test_transactions.py
conf/: settings.py  urls.py
frontend/: .cta.json  .env.example  .gitignore  AUTH_SETUP.md  package.json
frontend/src/: routeTree.gen.ts
frontend/src/components/: AuthGuard.tsx  Header.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  auth-client.ts  auth.server.ts  config.ts  session.ts
frontend/src/routes/: __root.tsx  _authenticated.index.tsx  _authenticated.tsx  index.tsx  login.tsx  signin.tsx
noodle/: __init__.py  _noodle.py  hue.py  noodle.py  notebook.ipynb  types.py  utils.py
